<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Birdr</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="tag">Record Details</string>
    <string name="mode_online">Online</string>
    <string name="mode_offline">Offline</string>
    <string name="loc_undef">Unable to get location &#8230;</string>
    <string name="email">Email/Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="description_short">I saw a bird</string>
    <string name="login">Login</string>
    <string name="skip">Skip</string>
    <string name="signup">Sign up</string>
    <string name="current_list">Current List: </string>
    <string name="defaultText">Default</string>
    <string name="my_list">My Lists</string>
    <string name="my_sightings">Sightings in the selected list:</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="search">Search</string>
    <string name="logout">Logout</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login_with_google">Login using Google+ </string>
    <string name="login_with_facebook">Login using Facebook</string>
    <string name="login_or">OR</string>
    <string name="close">X</string>
    <string name="dummy">hello world</string>
    <string name="zero">0</string>
    <string name="count">Birds in this list: </string>
    <string name="total">Total sightings</string>
    <string name="spotted">Spotted</string>
    <string name="undo">Undo</string>
    <string name="retry">Retry</string>
    <string name="newlist">Enter list name &#8230;</string>
    <string name="listinfo">Long press a list for more options.</string>
     <string name="add_list">Add list</string>
    <string name="delete_list">Delete list</string>
    <string name="share_list">Share...</string>
    <string name="rename_list">Rename list</string>
    <string name="set_default">Set as default</string>
    <string name="delete_sighting">Delete Sighting</string>
    <string name="submitFeedback">Submit Feedback</string>
    <string name="key_list_type">key1</string>
    <string name="key_list_position">key2</string>

    <color name="color_dark_gray">#292929</color>
    <color name="color_grey">#999</color>
    <color name="color_white">#FFF</color>
    <color name="color_50_transparent_white">#08FFFFFF</color>
    <color name="color_50_transparent_black">#08000000</color>
    <color name="color_light_grey">#555555</color>
    <color name="color_black_333">#333</color>
    <color name="gplus_normal">#dd4b39</color>
    <color name="gplus_pressed">#737373</color>
    <color name="fb_normal">#3B5998</color>
    <color name="fb_pressed">#6E7B98</color>
    <color name="color_app_bg">#FFFFFF</color>
    <color name="color_main_title">#EEE</color>
    <string-array name="checklists">
        <item>Bangalore</item>
        <item >India</item>
        <item >Great Britain</item>
        <item >Indonesia</item>
        <item >North America</item>
        <item >World</item>
    </string-array>
    <string name="app_id">198861263634066</string>
    <string name="versionNumber">v1.5</string>
    <string name="developedBy">Developed by</string>
    <string name="heardOnly">Heard only</string>

</resources>