<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_mylists"
        android:icon="@android:drawable/ic_menu_more"
        android:title="@string/my_list"
        android:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:showAsAction="ifRoom"
        android:title="@string/action_settings"/>
    
    <item
        android:id="@+id/action_login"
        android:icon="@android:drawable/presence_online"
        android:showAsAction="always"
        android:title="@string/login"/>
    <item
        android:id="@+id/action_logout"
        android:icon="@android:drawable/presence_offline"
        android:showAsAction="ifRoom"
        android:title="@string/logout"/>

    <!-- TODO : REMOVE items below this before releasing. -->

    <item
        android:id="@+id/action_developerSettings"
        android:orderInCategory="20"
        android:showAsAction="never"
        android:title="Dev Settings"/>

</menu>