<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/color_app_bg"
    >

    <TextView
        android:id="@+id/textView_title"
        android:layout_width="wrap_content"
        android:layout_height="123dp"
        android:layout_gravity="center"
        android:drawableLeft="@drawable/ic_launcher"
        android:gravity="center_vertical"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/color_main_title"
        android:textSize="50sp" />

    <EditText
        android:id="@+id/text_email"
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:paddingBottom="5dp"
        android:background="@drawable/textarea_normal"
        android:ellipsize="start"
        android:ems="8"
        android:hint="@string/email"
        android:textColor="@color/color_white"
        android:textCursorDrawable="@null"
        android:inputType="textEmailAddress" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/text_pass"
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="10dp"
        android:paddingBottom="5dp"
        android:background="@drawable/textarea_normal"
        android:ellipsize="start"
        android:ems="8"
        android:hint="@string/password"
        android:textColor="@color/color_white"
        android:textCursorDrawable="@null"
        android:inputType="textPassword" >

    </EditText>

    <EditText
        android:id="@+id/text_confirm"
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingBottom="5dp"
        android:background="@drawable/textarea_normal"
        android:ellipsize="start"
        android:ems="8"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/color_white"
        android:textCursorDrawable="@null"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:visibility="gone" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_add_selector"
        android:gravity="center_vertical|center_horizontal"
        
        android:text="@string/login" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp" >

        <TextView
            android:id="@+id/btn_skip"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="0.50"
            android:text="@string/skip"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/color_main_title"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/btn_signup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="0.50"
            android:gravity="right"
            android:text="@string/signup"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/color_main_title"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>