<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/white_grain2">
    
    <TextView
        android:id="@+id/aboutTextView_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#0092D4"
        android:textSize="120sp" />
    
    <TextView
        android:id="@+id/aboutTextView_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/versionNumber"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#696969"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/aboutTextView_developed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/developedBy"
        android:paddingTop="10dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#989898"
        android:textSize="20sp" />
    
    <TextView
        android:id="@+id/aboutTextView_names"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/versionNumber"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#696969"
        android:textSize="27sp" />
    
    <TextView
        android:id="@+id/aboutTextView_contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/versionNumber"
        android:paddingTop="10dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#8C8C8C"
        android:textSize="20sp" />
    
   
    
</LinearLayout>